<resources>
    <!--MainActivity-->
    <string name="ok">OK</string>
    <string name="created_by">AndroidStudio v.2.2.3</string>
    <string name="app_name">JavaGirl</string>
    <string name="github">GitHub</string>
    <string name="about_program">О программе</string>
    <string name="_4pda">4pda</string>
    <string name="da_abbr">DA</string>
    <string name="exit">Выход</string>
    <string name="change_log">История изменений</string>
    <string name="about_content" formatted="true"><![CDATA[Java Girl - это тестовый проект, с помощью которого я (прокачиваю свои мозги) учусь редактировать и познавать smali путем декомпиляции java-src и глубокого анализа.\nПриложение достаточно примитивно, в нем нет каких-то особенных или сверхестевственных функций. Нет. Это почти что \"Hello World!\", который я патчу и обновляю.\nИсходники проекта находятся в свободном доступе на GitHub [Меню > GitHub]\n*******************************************\n*******************************************\nСейчас [декабрь 2016] у меня не особо много времени, поэтому множество из того что запланировано будет воплощено позднее (возможно на зимних каникулах).\n*******************************************\n*******************************************\nТакже в приложении есть changelog, из которого можно узнать как и что добавляется в приложение\n*******************************************\n*******************************************\nАвтор:\nSnow Volf (Артём Жиганов)\nLicenced under the MIT LICENSE\n]]></string>
    <string name="cle_ar">Понятно</string>
    <string name="coming_soon">Скоро…</string>
    <string name="settings">Настройки</string>
    <string name="choose_fork">Выберите ветку для посещения</string>
    <string name="master">master</string>
    <string name="alpha">alpha</string>
    <string name="ot">" от"</string>
    <string name="debug">Debug</string>
    <!--dummy test-->
    <string name="hello">Привет</string>
    <string name="jgv2">JavaGirl v2</string>
    <string name="powered_me">Powered by Snow Volf</string>
    <string name="image_provided">Image Provided by NeoArtCore</string>
    <string name="test_1">ТЕСТ</string>
    <string name="test_2">ТЕСТ2</string>
    <string name="test_3">ТЕСТ3</string>
    <string name="test_4">ТЕСТ4</string>
    <string name="test_5">ТЕСТ5</string>
    <string name="test_6">ТЕСТ6</string>
    <string name="test_7">ТЕСТ7</string>
    <string name="test_8">ТЕСТ8</string>
    <string name="test_9">ТЕСТ9</string>
    <string name="test_10">ТЕСТ10</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Основное</string>

    <string name="pref_title_social_recommendations">Включить рекомендации</string>
    <string name="pref_description_social_recommendations">Рекомедации от людей с которыми вы общались
    </string>

    <string name="pref_title_display_name">Отображаемое имя</string>
    <string name="pref_default_display_name">Snow Volf</string>

    <string name="pref_title_add_friends_to_messages">Добавить друзей в переписку</string>
    <string-array name="pref_example_list_titles">
        <item>Всегда</item>
        <item>Когда возможно</item>
        <item>Никогда</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Аккаунты &amp; синхронизация</string>

    <string name="pref_title_sync_frequency">Таймаут синхронизации</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 минут</item>
        <item>30 минут</item>
        <item>1 час</item>
        <item>3 часа</item>
        <item>6 часов</item>
        <item>Никогда</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">Системные настройки</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Уведомления</string>

    <string name="pref_title_new_message_notifications">Новые уведомления</string>

    <string name="pref_title_ringtone">Рингтон</string>
    <string name="pref_ringtone_silent">Тишина</string>

    <string name="pref_title_vibrate">Вибрация</string>
    <!--AboutActivity-->
    <string name="ver_arc">Архив версий</string>
    <string name="suicide">Приложение закрывается</string>
    <string name="share_msg">JavaGirl by Snow Volf</string>
    <string name="in_developing">В разработке…</string>
</resources>
