<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app2="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools">

    <group
        android:id="@+id/inv"
        android:enabled="false">
        <item
            android:id="@+id/open_girl"
            android:title="Выбрать картинку"/>
    </group>
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/visit_git"
        android:title="@string/github" />
    <item
        android:id="@+id/changelog"
        android:title="@string/change_log" />
    <item
        android:id="@+id/about"
        android:title="@string/about_program" />

</menu>