<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="ru.SnowVolf.JavaGirl.MainActivity">
    <include layout="@layout/toolbar"/>
    <include layout="@layout/girl"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_height="wrap_content"
            android:text="@string/_4pda"
            android:onClick="onWebClick"
            android:layout_weight="1.0"
            android:layout_width="wrap_content" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onDeviantArtClick"
            android:text="@string/da_abbr"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:onClick="onExitClick"
            android:layout_weight="1.0"/>
    </LinearLayout>
</LinearLayout>
